--- a/css/events.css
+++ b/css/events.css
@@ -57,7 +57,9 @@ h3.sub-heading {
   font-size: 1.2em;
   padding: 0.5em;
 }
-
+.circle-des, .circle-time {
+  display: none;
+}
 
 
 .inner-circle {
@@ -98,6 +100,17 @@ h3.sub-heading {
   color: black;
   border-radius: 100%;
 }
+.overlay-content-wrap {
+  padding: 10%;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.overlay-title {
+  font-size: 3em;
+  font-family: "Rock Salt", cursive;
+}
+
 .full-overlay {
   display: none;
   position: fixed;
