--- a/css/events.css
+++ b/css/events.css
@@ -97,7 +97,24 @@ h3.sub-heading {
   box-shadow: 0 0 1em 0 white;
   color: black;
   border-radius: 100%;
+  text-align: center;
 }
+
+.overlay:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; /* Adjusts for spacing */
+}
+
+.overlay-content {
+  width: 50%;
+  margin: auto;
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .full-overlay {
   display: none;
   position: fixed;
