--- a/css/events.css
+++ b/css/events.css
@@ -109,18 +109,20 @@ h3.sub-heading {
   margin-right: -0.25em; /* Adjusts for spacing */
 }
 
-.overlay-content {
+.overlay-content-wrap {
   width: 50%;
   margin: auto;
   display: inline-block;
   vertical-align: middle;
 }
+/*
 .overlay-content-wrap {
   padding: 10%;
   width: 100%;
   height: 100%;
   text-align: center;
 }
+*/
 .overlay-title {
   font-size: 3em;
   font-family: "Rock Salt", cursive;
