--- a/css/events.css
+++ b/css/events.css
@@ -1,13 +1,12 @@
-body:not(.header *) {
-  font-size: 2em;
-}
 .container {
   width: 90%;
   margin: auto;
   color: white;
-  font-family: "Rock Salt", cursive;
+  font-family: sans-serif;
 }
-
+h1, h3 {
+  font-family: "Rock salt", fantasy;
+}
 h1.heading {
   font-size: 4em;
 }
@@ -54,13 +53,13 @@ h3.sub-heading {
 .circle-content {
   display: inline-block;
   vertical-align: middle;
-  font-size: 1.2em;
+  font-size: 1.5em;
   padding: 0.5em;
+  font-family: monospace;
 }
 .circle-data {
   display: none;
 }
-
 
 .inner-circle {
   background-color: white;
